# CMakeProjectExample

./: CMakeLists.txt  README.md
application/: CMakeLists.txt
application/testing_application/: CMakeLists.txt  testing_application.cpp
cmake/modules/: FindEigen3.cmake
cmake/targets/: foo_add_executable.cmake  foo_add_library.cmake  foo_add_test.cmake  foo_force_subdirectory.cmake  foo_header_only_workaround.cmake
test/: CMakeLists.txt
test/test_core/: CMakeLists.txt  test_logger.cpp
test/test_math/: CMakeLists.txt  test_add.cpp
